--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.469.0",
     "mongodb": "^6.12.0",
-    "next": "15.1.2",
+    "next": "^15.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-markdown": "^9.0.3",
     "rss-parser": "^3.13.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
